# ElaborateEditor

./: CMakeLists.txt  README.md  build_mac.sh
shaders/: default_fragment.fs  default_vertex.vs  fragment.fs
src/: main.cpp
src/core/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ImguiRenderer.cpp  ImguiRenderer.h  Shader.cpp  Shader.h  TextWindow.cpp  TextWindow.h  VertexArray.cpp  VertexArray.h  ViewportRenderer.cpp  ViewportRenderer.h  VisualObject.h  Window.cpp  Window.h
src/core/events/: CharPressedEvent.h  Event.h  KeyPressedEvent.h  MouseClickedEvent.h  MousePositionEvent.h  WindowResizeEvent.h
src/core/gui/: ImguiRenderer.cpp  ImguiRenderer.h  TextWindow.cpp  TextWindow.h
src/util/: File.h  Logger.cpp  Logger.h
viewport-shaders/: fragment.fs
